<resources>
    <string name="app_name">iNam</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_temp">Temp</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_region">Region</string>
    <string name="title_market">Market</string>
    <string name="title_manage_data">Manage Data</string>

    <string name="facebook_application_id" translatable="false">1974792305893276</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1974792305893276</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_home_new">HomeNewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_pin">Pin</string>
    <string name="title_more">More</string>

    <string name="title_item_market">Market</string>
    <string name="title_item_zone">Zone</string>
    <string name="title_item_shop">Shop</string>
    <string name="title_item_product">Product</string>
    <string name="title_item_stock">Stock</string>
    <string name="title_item_hotel">Hotel</string>
    <string name="title_item_room">Room</string>
    <string name="title_item_book">Book</string>
    <string name="title_item_travel">Travel</string>
    <string name="title_item_network">Network</string>
    <string name="title_item_service">Service</string>
    <string name="title_item_info">Information</string>
    <string name="title_item_contact">Contact</string>
    <string name="title_item_option">Option</string>
    <string name="title_item_address">Address</string>
    <string name="title_item_photo">Photo</string>
    <string name="title_item_award">Award</string>
    <string name="title_item_servicetime">Service Time</string>
    <string name="title_monday">Monday</string>
    <string name="title_tuesday">Tuesday</string>
    <string name="title_wednesday">Wednesday</string>
    <string name="title_thursday">Thursday</string>
    <string name="title_friday">Friday</string>
    <string name="title_saturday">Saturday</string>
    <string name="title_sunday">Sunday</string>
    <string name="title_opentime_close">Close</string>

    <string name="save_process">Saving...</string>
    <string name="save_success">Complete</string>
    <string name="save_fault">Fault</string>
    <string name="title_activity_maps_test">Map</string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="title_dashboard">Product</string>
    <string name="title_notifications">More</string>
    <string name="title_activity_stock_main">StockMainActivity</string>

    <string name="tab_text_stock_1">Payment pending</string>
    <string name="tab_text_stock_2">Processing</string>
    <string name="tab_text_stock_3">Shipped</string>
    <string name="tab_text_stock_4">Delivered</string>


</resources>
