<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewItem"
        android:elevation="@dimen/row_show_elevation"
        card_view:cardCornerRadius="10dp"
        card_view:cardUseCompatPadding="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/row_show_margin"
            style="@style/LinearLayoutItem">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextTitleItem"
                android:text="@string/title_item_servicetime"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutItem"
                android:weightSum="3"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_monday"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Open">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_monday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Close">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_monday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutItem"
                android:weightSum="3"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_tuesday"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Open">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_tuesday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Close">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_tuesday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutItem"
                android:weightSum="3"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_wednesday"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Open">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_wednesday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Close">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_wednesday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutItem"
                android:weightSum="3"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_thursday"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Open">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_thursday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Close">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_thursday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutItem"
                android:weightSum="3"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_friday"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Open">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_friday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Close">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_friday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutItem"
                android:weightSum="3"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_saturday"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Open">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_saturday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Close">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_saturday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutItem"
                android:weightSum="3"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_sunday"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Open">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sunday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/TextInputLayoutItem"
                    android:hint="Close">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sunday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        style="@style/TextInputEditTextItem"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>