<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".fragment.manage.item.ZoneItemFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:contentInsetStartWithNavigation="0dp"
                android:paddingEnd="16dp"
                android:paddingStart="6dp"
                app:navigationIcon="@drawable/ic_close_white"
                app:title="@string/title_item_zone"
                android:background="@android:color/transparent"
                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardViewItem"
                    android:elevation="8dp"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardUseCompatPadding="true">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        style="@style/LinearLayoutItem">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextTitleItem"
                            android:text="@string/title_item_info"/>

                    <Spinner
                            android:id="@+id/spin"
                            style="@style/SpinnerItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardViewItem"
                    android:elevation="8dp"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardUseCompatPadding="true">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        style="@style/LinearLayoutItem">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextTitleItem"
                            android:text="@string/title_item_contact"/>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextInputLayoutItem"
                            android:hint="Name">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextInputEditTextItem"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextInputLayoutItem"
                            android:hint="Owner Name">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_owner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextInputEditTextItem"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextInputLayoutItem"
                            android:hint="Size">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_size"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextInputEditTextItem"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <include layout="@layout/card_photo_item"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>